--- a/index.html
+++ b/index.html
@@ -179,6 +179,74 @@
         body.light-theme .app-icon {
             color: var(--text-light);
         }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .container {
+                padding: 1rem;
+            }
+
+            .app-card {
+                padding: 1rem;
+                flex-direction: column;
+                align-items: flex-start;
+                text-align: center;
+            }
+
+            .app-icon-wrapper {
+                margin-bottom: 1rem;
+            }
+
+            .app-info {
+                text-align: center;
+            }
+
+            .app-title {
+                font-size: 1.125rem;
+            }
+
+            .app-link {
+                font-size: 0.75rem;
+                padding: 0.5rem;
+            }
+
+            .theme-toggle {
+                font-size: 1.25rem;
+                top: 0.5rem;
+                right: 0.5rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 2rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .app-card {
+                border-radius: 0.75rem;
+                padding: 0.75rem;
+            }
+
+            .app-icon-wrapper {
+                width: 50px;
+                height: 50px;
+                font-size: 1.5rem;
+            }
+
+            .app-title {
+                font-size: 1rem;
+            }
+
+            .app-link {
+                font-size: 0.625rem;
+                padding: 0.5rem 0.75rem;
+            }
+
+            .theme-toggle {
+                font-size: 1.125rem;
+            }
+        }
     </style>
 </head>
 <body class="dark-theme">
