--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <i class="fas fa-sun"></i>
     </button>
     <div class="container">
-        <h1>App Launcher</h1>
+        <h1>Rapid Access</h1>
         <div class="app-list" id="appList">
             <!-- App cards will be dynamically inserted here -->
         </div>
