--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head><meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://code.jquery.com https://unpkg.com https://d3js.org https://threejs.org https://cdn.plot.ly https://stackpath.bootstrapcdn.com https://maps.googleapis.com https://cdn.tailwindcss.com https://ajax.googleapis.com https://kit.fontawesome.com https://cdn.datatables.net https://maxcdn.bootstrapcdn.com https://code.highcharts.com https://tako-static-assets-production.s3.amazonaws.com https://www.youtube.com https://fonts.googleapis.com https://fonts.gstatic.com https://pfst.cf2.poecdn.net https://i.imgur.com https://wikimedia.org https://*.icons8.com https://*.giphy.com https://picsum.photos https://images.unsplash.com; frame-src 'self' https://www.youtube.com https://trytako.com; child-src 'self'; manifest-src 'self'; worker-src 'self'; upgrade-insecure-requests; block-all-mixed-content;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced App Launcher</title>
@@ -15,6 +13,9 @@
             --text-light: #1a202c;
             --primary-color: #3b82f6;
             --secondary-color: #4f46e5;
+            --card-bg-dark: rgba(255,255,255,0.1);
+            --card-bg-light: rgba(0,0,0,0.05);
+            --transition-speed: 0.3s;
         }
 
         body {
@@ -26,7 +27,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            transition: background-color 0.5s ease, color 0.5s ease;
+            transition: background-color var(--transition-speed) ease, color var(--transition-speed) ease;
             background-color: var(--bg-dark);
             color: var(--text-dark);
         }
@@ -46,6 +47,7 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             position: relative;
+            transition: transform var(--transition-speed) ease;
         }
 
         h1::after {
@@ -58,6 +60,15 @@
             background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
             transform: translateX(-50%);
             border-radius: 2px;
+            transition: width var(--transition-speed) ease;
+        }
+
+        h1:hover {
+            transform: scale(1.05);
+        }
+
+        h1:hover::after {
+            width: 100px;
         }
 
         .app-grid {
@@ -67,13 +78,13 @@
         }
 
         .app-card {
-            background: linear-gradient(135deg, rgba(255,255,255,0.1), rgba(255,255,255,0.05));
+            background: linear-gradient(135deg, var(--card-bg-dark), rgba(255,255,255,0.05));
             border-radius: 1.5rem;
             padding: 2rem;
             display: flex;
             flex-direction: column;
             align-items: center;
-            transition: all 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
+            transition: all var(--transition-speed) cubic-bezier(0.25, 0.8, 0.25, 1);
             position: relative;
             overflow: hidden;
             cursor: pointer;
@@ -95,7 +106,7 @@
             align-items: center;
             justify-content: center;
             margin-bottom: 1.5rem;
-            transition: all 0.5s ease;
+            transition: all var(--transition-speed) ease;
         }
 
         .app-card:hover .app-icon-wrapper {
@@ -105,7 +116,7 @@
         .app-icon {
             font-size: 2.5rem;
             color: var(--text-dark);
-            transition: all 0.5s ease;
+            transition: all var(--transition-speed) ease;
         }
 
         .app-title {
@@ -123,7 +134,7 @@
             border-radius: 9999px;
             display: inline-flex;
             align-items: center;
-            transition: all 0.3s ease;
+            transition: all var(--transition-speed) ease;
             font-size: 1rem;
             font-weight: 500;
             position: relative;
@@ -137,7 +148,7 @@
         .app-link i {
             margin-left: 0.5rem;
             font-size: 0.875rem;
-            transition: transform 0.3s ease;
+            transition: transform var(--transition-speed) ease;
         }
 
         .app-link:hover i {
@@ -154,7 +165,7 @@
             cursor: pointer;
             z-index: 10;
             color: var(--text-dark);
-            transition: all 0.5s ease;
+            transition: all var(--transition-speed) ease;
         }
 
         .theme-toggle:hover {
@@ -167,7 +178,7 @@
         }
 
         body.light-theme .app-card {
-            background: linear-gradient(135deg, rgba(0,0,0,0.05), rgba(0,0,0,0.02));
+            background: linear-gradient(135deg, var(--card-bg-light), rgba(0,0,0,0.02));
             border: 1px solid rgba(0,0,0,0.1);
         }
 
@@ -251,6 +262,15 @@
                 grid-template-columns: 1fr;
             }
         }
+
+        @media (prefers-reduced-motion: reduce) {
+            *, *::before, *::after {
+                animation-duration: 0.01ms !important;
+                animation-iteration-count: 1 !important;
+                transition-duration: 0.01ms !important;
+                scroll-behavior: auto !important;
+            }
+        }
     </style>
 </head>
 <body>
@@ -276,16 +296,19 @@
 
             card.innerHTML = `
                 <div class="app-icon-wrapper" style="background: linear-gradient(135deg, ${app.gradient[0]}, ${app.gradient[1]})">
-                    <i class="app-icon fas ${app.icon}"></i>
+                    <i class="app-icon fas ${app.icon}" aria-hidden="true"></i>
                 </div>
                 <h3 class="app-title">${app.title}</h3>
                 <a href="${app.url}" target="_blank" rel="noopener noreferrer" class="app-link">
-                    ${app.comingSoon ? 'Coming Soon' : 'Launch'} <i class="fas ${app.comingSoon ? 'fa-clock' : 'fa-external-link-alt'}"></i>
+                    ${app.comingSoon ? 'Coming Soon' : 'Launch'} <i class="fas ${app.comingSoon ? 'fa-clock' : 'fa-external-link-alt'}" aria-hidden="true"></i>
                 </a>
             `;
 
             if (app.comingSoon) {
-                card.querySelector('.app-link').addEventListener('click', (e) => e.preventDefault());
+                const link = card.querySelector('.app-link');
+                link.addEventListener('click', (e) => e.preventDefault());
+                link.setAttribute('aria-disabled', 'true');
+                link.setAttribute('tabindex', '-1');
             }
 
             return card;
@@ -305,10 +328,10 @@
             body.classList.toggle('light-theme');
             
             if (body.classList.contains('light-theme')) {
-                themeToggle.innerHTML = '<i class="fas fa-moon"></i>';
+                themeToggle.innerHTML = '<i class="fas fa-moon" aria-hidden="true"></i>';
                 themeToggle.setAttribute('aria-label', 'Switch to dark mode');
             } else {
-                themeToggle.innerHTML = '<i class="fas fa-sun"></i>';
+                themeToggle.innerHTML = '<i class="fas fa-sun" aria-hidden="true"></i>';
                 themeToggle.setAttribute('aria-label', 'Switch to light mode');
             }
         }
@@ -329,6 +352,19 @@
                 });
             });
         });
+
+        // Keyboard navigation for app cards
+        document.addEventListener('keydown', (e) => {
+            if (e.key === 'Enter' || e.key === ' ') {
+                if (e.target.classList.contains('app-card')) {
+                    const link = e.target.querySelector('.app-link');
+                    if (link && !link.getAttribute('aria-disabled')) {
+                        link.click();
+                    }
+                }
+            }
+        });
     </script>
-</body>
-</html>
+
+
+</body></html>
