--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <i class="fas fa-sun"></i>
     </button>
     <div class="container">
-        <h1>Rapid Link</h1>
+        <h1>LinkExpress</h1>
         <div class="app-grid" id="appGrid"></div>
     </div>
 
