--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <span class="visually-hidden">Toggle theme</span>
     </button>
     <div class="container">
-        <h1>LinkExpress Ultimate</h1>
+        <h1>LinkExpress</h1>
         <div class="app-grid" id="appGrid"></div>
     </div>
 
